--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -114,8 +114,7 @@ dist_man_MANS = \
 	dpkg-trigger.1 \
 	dpkg-vendor.1 \
 	dpkg.1 \
-	dpkg.cfg.5 \
-	update-alternatives.8
+	dpkg.cfg.5
 
 if WITH_DSELECT
 dist_man_MANS += \
@@ -126,6 +125,11 @@ endif
 if WITH_START_STOP_DAEMON
 dist_man_MANS += \
 	start-stop-daemon.8
+endif
+
+if WITH_UPDATE_ALTERNATIVES
+dist_man_MANS += \
+	update-alternatives.8
 endif
 
 EXTRA_DIST = \
