--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -20,6 +20,7 @@ if WITH_START_STOP_DAEMON
 	$(SSD_LIBS)
 endif
 
+if WITH_INSTALL_INFO
 sbin_PROGRAMS += dpkg-install-info
 
 # Automake has its own install-info rule, gah
@@ -27,9 +28,12 @@ dpkg_install_info_SOURCES = install-info.c
 
 dpkg_install_info_LDADD = \
 	../lib/compat/libcompat.a
+endif
 
 transform = s/dpkg-install-info/install-info/; $(program_transform_name)
 
 uninstall-local:
+if WITH_INSTALL_INFO
 	rm -f $(DESTDIR)$(sbindir)/install-info
+endif
 
