libdpkg: Add a new pkg-queue module

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,6 +25,7 @@ lib/dpkg/pkg.c
 lib/dpkg/pkg-array.c
 lib/dpkg/pkg-format.c
 lib/dpkg/pkg-list.c
+lib/dpkg/pkg-queue.c
 lib/dpkg/progress.c
 lib/dpkg/string.c
 lib/dpkg/subproc.c
