--- a/lib/dpkg/test/Makefile.am
+++ b/lib/dpkg/test/Makefile.am
@@ -18,7 +18,8 @@ check_PROGRAMS = \
 	t-ar \
 	t-version \
 	t-pkginfo \
-	t-pkg-list
+	t-pkg-list \
+	t-pkg-queue
 
 CHECK_LDADD = ../libdpkg.a
 
@@ -28,6 +29,7 @@ t_macros_LDADD = $(CHECK_LDADD)
 t_path_LDADD = $(CHECK_LDADD)
 t_pkginfo_LDADD = $(CHECK_LDADD)
 t_pkg_list_LDADD = $(CHECK_LDADD)
+t_pkg_queue_LDADD = $(CHECK_LDADD)
 t_string_LDADD = $(CHECK_LDADD)
 t_buffer_LDADD = $(CHECK_LDADD)
 t_test_LDADD = $(CHECK_LDADD)
