Add dpkg-gensymbols.1 to the translatable man page set
and update all po files accordingly.

--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -118,6 +118,11 @@
            add_$lang:po/$lang.add
 
 
+[type:man] dpkg-gensymbols.1         \
+           $lang:$(builddir)/$lang/dpkg-gensymbols.1        \
+           add_$lang:po/$lang.add
+
+
 [type:man] dpkg-name.1                \
            $lang:$(builddir)/$lang/dpkg-name.1              \
            add_$lang:po/$lang.add
