Add a new libdpkg-dev package with the headers and the static library
The API should be considered volatile. Although this will help somewhat
people that are currently using the static library anyway, but have to
resort to building dpkg from source and using the headers and the static
library from the source tree.

--- a/Makefile.am
+++ b/Makefile.am
@@ -53,6 +53,9 @@ EXTRA_DIST = \
 	debian/dselect.install \
 	debian/dselect.preinst \
 	debian/dselect.lintian-overrides \
+	debian/libdpkg-dev.docs \
+	debian/libdpkg-dev.install \
+	debian/libdpkg-dev.lintian-overrides \
 	debian/source.lintian-overrides \
 	debian/source/format \
 	debian/source/options \
