Makefile.am: Fix EXTRA_DIST target
Reflect rename of source.lintian-overrides in commit
d2b11fc77ab5e2d0208f7a60a21984726c481fe7.

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,7 +56,7 @@ EXTRA_DIST = \
 	debian/libdpkg-dev.docs \
 	debian/libdpkg-dev.install \
 	debian/libdpkg-dev.lintian-overrides \
-	debian/source.lintian-overrides \
+	debian/source/lintian-overrides \
 	debian/source/format \
 	debian/source/options \
 	debian/usertags \
