--- a/debian/control
+++ b/debian/control
@@ -52,9 +52,8 @@ Package: dpkg-dev
 Section: utils
 Priority: optional
 Architecture: all
-Depends: dpkg (>= 1.15.4), perl, bzip2, xz-utils,
- patch (>= 2.2-1), make, binutils, libtimedate-perl,
- base-files (>= 5.0.0), ${misc:Depends}
+Depends: libdpkg-perl (= ${source:Version}), bzip2, xz-utils,
+ patch, make, binutils, base-files (>= 5.0.0), ${misc:Depends}
 Recommends: gcc | c-compiler, build-essential, fakeroot, gnupg, gpgv
 Suggests: debian-keyring
 Conflicts: dpkg-cross (<< 2.0.0), devscripts (<< 2.10.26)
@@ -65,6 +64,40 @@ Description: Debian package development tools
  .
  Most Debian source packages will require additional tools to build;
  for example, most packages need make and the C compiler gcc.
+
+Package: libdpkg-perl
+Section: perl
+Priority: optional
+Architecture: all
+Depends: dpkg (>= 1.15.4), perl, libtimedate-perl, ${misc:Depends}
+Recommends: bzip2, xz-utils
+Suggests: debian-keyring, gnupg, gpgv, binutils, patch
+Conflicts: dpkg-dev (<< 1.15.6)
+Replaces: dpkg-dev (<< 1.15.6)
+Description: Dpkg perl modules
+ This package provides the perl modules used by the scripts
+ in dpkg-dev. They cover a wide range of functionalities. Among them
+ there are the following modules:
+ .
+  - Dpkg::Arch: manipulate Debian architecture information
+  - Dpkg::BuildOptions: parse and manipulate DEB_BUILD_OPTIONS
+  - Dpkg::Changelog: parse Debian changelogs
+  - Dpkg::Checksums: generate and parse checksums
+  - Dpkg::Compression::Process: wrapper around compression tools
+  - Dpkg::Compression::FileHandle: transparently (de)compress files
+  - Dpkg::Control: parse and manipulate Debian control information
+    (.dsc, .changes, Packages/Sources entries, etc.)
+  - Dpkg::Deps: parse and manipulate dependencies
+  - Dpkg::ErrorHandling: common error functions
+  - Dpkg::Index: collections of Dpkg::Control (Packages/Sources files for
+    example)
+  - Dpkg::IPC: spawn sub-processes and feed/retrieve data
+  - Dpkg::Substvars: substitute variables in strings
+  - Dpkg::Vendor: identify current distribution vendor
+  - Dpkg::Version: parse and manipulate Debian package versions
+ .
+ All the packages listed in Suggests or Recommends are used by some of the
+ modules.
 
 Package: dselect
 Priority: optional
