dpkg: Use posix_fadvise on non-Linux to speed up .list files loading
When FIEMAP is not available try to use posix_fadvise() to request
the preloading of the .list files. A search with dpkg-query went
from 28 to 17 seconds, giving around 40% improvement.

Closes: #557560

Signed-off-by: Guillem Jover <guillem@debian.org>

--- a/configure.ac
+++ b/configure.ac
@@ -124,7 +124,8 @@ DPKG_CHECK_DECL([WCOREDUMP], [sys/wait.h])
 DPKG_CHECK_COMPAT_FUNCS([getopt getopt_long obstack_free \
                          strnlen strerror strsignal \
                          scandir alphasort unsetenv])
-AC_CHECK_FUNCS([strtoul isascii bcopy memcpy lchown setsid getdtablesize])
+AC_CHECK_FUNCS([strtoul isascii bcopy memcpy lchown setsid getdtablesize \
+                posix_fadvise])
 
 AC_DEFINE(LIBDPKG_VOLATILE_API, 1, [Acknowledge the volatility of the API.])
 DPKG_COMPILER_WARNINGS
