Do an fsync on database directories
After creating, renaming or unlinking database files sync its
containing directory, to guarantee the new file entry is correctly
listed in the directory.

Closes: #567089

Base-on-patch-by: Jean-Baptiste Lallement <jeanbaptiste.lallement@gmail.com>

--- a/lib/dpkg/Makefile.am
+++ b/lib/dpkg/Makefile.am
@@ -29,6 +29,7 @@ libdpkg_a_SOURCES = \
 	compress.c \
 	database.c \
 	dbmodify.c \
+	dir.c \
 	dump.c \
 	ehandle.c \
 	file.c \
@@ -63,6 +64,7 @@ pkginclude_HEADERS = \
 	buffer.h \
 	command.h \
 	compress.h \
+	dir.h \
 	dpkg.h \
 	dpkg-db.h \
 	file.h \
