build: Replace all / with :: on perl module man pages filenames
The current sed expression was only replacing the first one, which
didn't take into account nested modules.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -154,7 +154,7 @@ install-data-hook:
 uninstall-local:
 if BUILD_POD_DOC
 	for module in $(nobase_dist_perllib_DATA); do \
-	    rm -f $(DESTDIR)$(man3dir)/`echo $$module | sed -e 's|/|::|' -e 's/\.pm$$/.3/'`; \
+	    rm -f $(DESTDIR)$(man3dir)/`echo $$module | sed -e 's|/|::|g' -e 's/\.pm$$/.3/'`; \
 	done
 endif
 	rm -f $(DESTDIR)$(sysconfdir)/alternatives/README
