--- a/debian/control
+++ b/debian/control
@@ -19,8 +19,8 @@ Section: libdevel
 Priority: optional
 Architecture: any
 Depends: ${misc:Depends}
-Description: package maintenance system for Debian - development files
- This package contains the header files and static library necessary to
+Description: Debian package management static library
+ This package provides the header files and static library necessary to
  develop software using libdpkg, the same library used internally by dpkg.
  .
  Note though, that the API is to be considered volatile, and might change
